<resources>
    <string name="app_name">Eleição</string>
    <string name="editar">Editar</string>
    <string name="setor_eleitor">Setor</string>
    <string name="nome_eleitor">Nome</string>
    <string name="endereco_eleitor">Endereço</string>
    <string name="telefone_eleitor">Telefone</string>
    <string name="data_nascimento_eleitor">Data de nascimento</string>
    <string name="colegio_votacao_eleitor">Colégio de votação</string>
    <string name="observacao_eleitor">Observação</string>
    <string name="confirmar_edição">Salvar</string>
    <string name="pesquisar">Pesquisar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
